; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/ap/extr_wpa_auth.c_wpa_group_setkeysdone.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/ap/extr_wpa_auth.c_wpa_group_setkeysdone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_authenticator = type { i32 }
%struct.wpa_group = type { i32, i32, i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [66 x i8] c"WPA: group state machine entering state SETKEYSDONE (VLAN-ID %d)\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@WPA_GROUP_SETKEYSDONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpa_authenticator*, %struct.wpa_group*)* @wpa_group_setkeysdone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wpa_group_setkeysdone(%struct.wpa_authenticator* %0, %struct.wpa_group* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wpa_authenticator*, align 8
  %5 = alloca %struct.wpa_group*, align 8
  store %struct.wpa_authenticator* %0, %struct.wpa_authenticator** %4, align 8
  store %struct.wpa_group* %1, %struct.wpa_group** %5, align 8
  %6 = load i32, i32* @MSG_DEBUG, align 4
  %7 = load %struct.wpa_group*, %struct.wpa_group** %5, align 8
  %8 = getelementptr inbounds %struct.wpa_group, %struct.wpa_group* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @wpa_printf(i32 %6, i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @TRUE, align 4
  %12 = load %struct.wpa_group*, %struct.wpa_group** %5, align 8
  %13 = getelementptr inbounds %struct.wpa_group, %struct.wpa_group* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @WPA_GROUP_SETKEYSDONE, align 4
  %15 = load %struct.wpa_group*, %struct.wpa_group** %5, align 8
  %16 = getelementptr inbounds %struct.wpa_group, %struct.wpa_group* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load %struct.wpa_authenticator*, %struct.wpa_authenticator** %4, align 8
  %18 = load %struct.wpa_group*, %struct.wpa_group** %5, align 8
  %19 = call i64 @wpa_group_config_group_keys(%struct.wpa_authenticator* %17, %struct.wpa_group* %18)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

22:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %21
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1

declare dso_local i64 @wpa_group_config_group_keys(%struct.wpa_authenticator*, %struct.wpa_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
